--- a/kNN/knn.ipynb
+++ b/kNN/knn.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,13 @@
     "        label = nearest_k_neighbours.mean()\n",
     "        \n",
     "        return label, nearest_k_idx\n",
-    "        \n",
+    "    \n",
+    "    def eval(self, X_test, y_test):\n",
+    "        y_predicted = np.zeros(y_test.shape)\n",
+    "        for i in range(y_test.shape[0]):\n",
+    "            y_predicted[i], _ = self.predict(X_test[i,:])\n",
+    "        error = y_predicted - y_test\n",
+    "        return error        \n",
     "        \n",
     "        \n",
     "            \n",
@@ -119,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
