Added logistic regression

--- a/LogisticRegression/notebooks/LogisticRegression.ipynb
+++ b/LogisticRegression/notebooks/LogisticRegression.ipynb
@@ -154,10 +154,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "class LogisticRegression:\n",
-    "    def __init__(self, lr=0.01) -> None:\n",
-    "        self.lr = lr\n",
-    "        "
+    "    def __init__(self, learning_rate=0.01, max_iter=1000, batch_size=32):\n",
+    "\n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.max_iter = max_iter\n",
+    "        self.batch_size = batch_size\n",
+    "        self.weights = None\n",
+    "        self.losses = []\n",
+    "\n",
+    "    def _sigmoid(self, z):\n",
+    "        return 1 / (1 + np.exp(-z))\n",
+    "    \n",
+    "    def _h_theta(self, X):\n",
+    "        #Computes the hypothesis function (logistic regression output).\n",
+    "\n",
+    "        return self._sigmoid(np.dot(X, self.weights))\n",
+    "    \n",
+    "    def _compute_loss_and_gradient(self, X, y):\n",
+    "        m = X.shape[0]\n",
+    "        h = self._h_theta(X)\n",
+    "        loss = - np.mean(y * np.log(h) + (1 - y) * np.log(1 - h))\n",
+    "        grad = np.dot(X.T, (h - y)) / m\n",
+    "        return loss, grad\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        # Trains the logistic regression model using mini-batch gradient descent.\n",
+    "        \n",
+    "        m, n = X.shape\n",
+    "        self.weights = np.zeros(n)\n",
+    "\n",
+    "        for i in range(self.max_iter):\n",
+    "            # Randomly shuffle the data\n",
+    "            indices = np.random.permutation(m)\n",
+    "            X_shuffled = X[indices]\n",
+    "            y_shuffled = y[indices]\n",
+    "\n",
+    "            # Create mini-batches\n",
+    "            for start in range(0, m, self.batch_size):\n",
+    "                end = start + self.batch_size\n",
+    "                batch_X = X_shuffled[start:end]\n",
+    "                batch_y = y_shuffled[start:end]\n",
+    "                loss, grad = self._compute_loss_and_gradient(batch_X, batch_y)\n",
+    "                self.weights -= self.learning_rate * grad\n",
+    "\n",
+    "            if i % 100 == 0:\n",
+    "                self.losses.append(loss)\n",
+    "                print(f\"Loss at iteration {i}: {loss:.4f}\")\n",
+    "\n",
+    "        return self\n",
+    "    \n",
+    "    def predict_proba(self, X):\n",
+    "        # Predicts the probability estimates for each sample.\n",
+    "        \n",
+    "        return self._h_theta(X)\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        #Predicts binary labels for each sample.\n",
+    "        return np.round(self.predict_proba(X))\n",
+    "\n",
+    "Example usage:\n",
+    "model = LogisticRegression(learning_rate=0.01, max_iter=5000, batch_size=32)\n",
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)\n"
    ]
   },
   {
